100%Compiler/output/ValuesParser.java
// $ANTLR 3.4 C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g 2025-07-31 06:30:22

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class ValuesParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ArithmaticOperators", "AssignmentAutoOperators", "AssignmentOperators", "CharValue", "Comment", "ComparisonOperators", "DoubleValue", "ID", "IntValue", "LogicalOperators", "StringValue", "WS", "'('", "')'", "','", "';'", "'='", "'boolean'", "'do'", "'double'", "'else'", "'false'", "'for'", "'if'", "'int'", "'private'", "'protected'", "'public'", "'return'", "'static'", "'true'", "'void'", "'while'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int ArithmaticOperators=4;
    public static final int AssignmentAutoOperators=5;
    public static final int AssignmentOperators=6;
    public static final int CharValue=7;
    public static final int Comment=8;
    public static final int ComparisonOperators=9;
    public static final int DoubleValue=10;
    public static final int ID=11;
    public static final int IntValue=12;
    public static final int LogicalOperators=13;
    public static final int StringValue=14;
    public static final int WS=15;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ValuesParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ValuesParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return ValuesParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g"; }



    // $ANTLR start "run"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:3:1: run : ( stmts )+ ;
    public final void run() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:3:5: ( ( stmts )+ )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:3:7: ( stmts )+
            {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:3:7: ( stmts )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Comment||LA1_0==ID||(LA1_0 >= 21 && LA1_0 <= 23)||(LA1_0 >= 26 && LA1_0 <= 28)||LA1_0==36) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:3:7: stmts
            	    {
            	    pushFollow(FOLLOW_stmts_in_run10);
            	    stmts();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "run"



    // $ANTLR start "stmts"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:1: stmts : ( ifStmt | numberDeclarations | whileStmt | dowhileStmt | forStmt | assignmentStmt | booleanDeclarations | comment );
    public final void stmts() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:7: ( ifStmt | numberDeclarations | whileStmt | dowhileStmt | forStmt | assignmentStmt | booleanDeclarations | comment )
            int alt2=8;
            switch ( input.LA(1) ) {
            case 27:
                {
                alt2=1;
                }
                break;
            case 23:
            case 28:
                {
                alt2=2;
                }
                break;
            case 36:
                {
                alt2=3;
                }
                break;
            case 22:
                {
                alt2=4;
                }
                break;
            case 26:
                {
                alt2=5;
                }
                break;
            case ID:
                {
                alt2=6;
                }
                break;
            case 21:
                {
                alt2=7;
                }
                break;
            case Comment:
                {
                alt2=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:9: ifStmt
                    {
                    pushFollow(FOLLOW_ifStmt_in_stmts19);
                    ifStmt();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:18: numberDeclarations
                    {
                    pushFollow(FOLLOW_numberDeclarations_in_stmts23);
                    numberDeclarations();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:39: whileStmt
                    {
                    pushFollow(FOLLOW_whileStmt_in_stmts27);
                    whileStmt();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:51: dowhileStmt
                    {
                    pushFollow(FOLLOW_dowhileStmt_in_stmts31);
                    dowhileStmt();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:65: forStmt
                    {
                    pushFollow(FOLLOW_forStmt_in_stmts35);
                    forStmt();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:75: assignmentStmt
                    {
                    pushFollow(FOLLOW_assignmentStmt_in_stmts39);
                    assignmentStmt();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:92: booleanDeclarations
                    {
                    pushFollow(FOLLOW_booleanDeclarations_in_stmts43);
                    booleanDeclarations();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:5:114: comment
                    {
                    pushFollow(FOLLOW_comment_in_stmts47);
                    comment();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "stmts"



    // $ANTLR start "body"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:7:1: body : '{' ( stmts )* '}' ;
    public final void body() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:7:6: ( '{' ( stmts )* '}' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:7:8: '{' ( stmts )* '}'
            {
            match(input,37,FOLLOW_37_in_body55); 

            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:7:12: ( stmts )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==Comment||LA3_0==ID||(LA3_0 >= 21 && LA3_0 <= 23)||(LA3_0 >= 26 && LA3_0 <= 28)||LA3_0==36) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:7:13: stmts
            	    {
            	    pushFollow(FOLLOW_stmts_in_body58);
            	    stmts();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            match(input,38,FOLLOW_38_in_body62); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "body"



    // $ANTLR start "functionStmt"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:9:1: functionStmt : functionDeclaration functionBody ;
    public final void functionStmt() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:9:13: ( functionDeclaration functionBody )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:9:15: functionDeclaration functionBody
            {
            pushFollow(FOLLOW_functionDeclaration_in_functionStmt69);
            functionDeclaration();

            state._fsp--;


            pushFollow(FOLLOW_functionBody_in_functionStmt71);
            functionBody();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "functionStmt"



    // $ANTLR start "functionBody"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:1: functionBody : '{' ( stmts )* ( 'return' ( fullBooleanExpressions | numberExpression ) ';' )? '}' ;
    public final void functionBody() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:13: ( '{' ( stmts )* ( 'return' ( fullBooleanExpressions | numberExpression ) ';' )? '}' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:15: '{' ( stmts )* ( 'return' ( fullBooleanExpressions | numberExpression ) ';' )? '}'
            {
            match(input,37,FOLLOW_37_in_functionBody78); 

            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:19: ( stmts )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==Comment||LA4_0==ID||(LA4_0 >= 21 && LA4_0 <= 23)||(LA4_0 >= 26 && LA4_0 <= 28)||LA4_0==36) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:20: stmts
            	    {
            	    pushFollow(FOLLOW_stmts_in_functionBody81);
            	    stmts();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:28: ( 'return' ( fullBooleanExpressions | numberExpression ) ';' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==32) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:29: 'return' ( fullBooleanExpressions | numberExpression ) ';'
                    {
                    match(input,32,FOLLOW_32_in_functionBody86); 

                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:38: ( fullBooleanExpressions | numberExpression )
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( ((LA5_0 >= DoubleValue && LA5_0 <= IntValue)) ) {
                        int LA5_1 = input.LA(2);

                        if ( (LA5_1==ComparisonOperators) ) {
                            alt5=1;
                        }
                        else if ( (LA5_1==ArithmaticOperators||LA5_1==19) ) {
                            alt5=2;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 1, input);

                            throw nvae;

                        }
                    }
                    else if ( (LA5_0==25||LA5_0==34) ) {
                        alt5=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 0, input);

                        throw nvae;

                    }
                    switch (alt5) {
                        case 1 :
                            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:39: fullBooleanExpressions
                            {
                            pushFollow(FOLLOW_fullBooleanExpressions_in_functionBody89);
                            fullBooleanExpressions();

                            state._fsp--;


                            }
                            break;
                        case 2 :
                            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:11:64: numberExpression
                            {
                            pushFollow(FOLLOW_numberExpression_in_functionBody93);
                            numberExpression();

                            state._fsp--;


                            }
                            break;

                    }


                    match(input,19,FOLLOW_19_in_functionBody96); 

                    }
                    break;

            }


            match(input,38,FOLLOW_38_in_functionBody100); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "functionBody"



    // $ANTLR start "functionDeclaration"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:1: functionDeclaration : ( modifiers )? ( 'static' )? functionReturnType ID '(' ')' ;
    public final void functionDeclaration() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:20: ( ( modifiers )? ( 'static' )? functionReturnType ID '(' ')' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:22: ( modifiers )? ( 'static' )? functionReturnType ID '(' ')'
            {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:22: ( modifiers )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0 >= 29 && LA7_0 <= 31)) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:22: modifiers
                    {
                    pushFollow(FOLLOW_modifiers_in_functionDeclaration107);
                    modifiers();

                    state._fsp--;


                    }
                    break;

            }


            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:33: ( 'static' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==33) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:13:33: 'static'
                    {
                    match(input,33,FOLLOW_33_in_functionDeclaration110); 

                    }
                    break;

            }


            pushFollow(FOLLOW_functionReturnType_in_functionDeclaration113);
            functionReturnType();

            state._fsp--;


            match(input,ID,FOLLOW_ID_in_functionDeclaration115); 

            match(input,16,FOLLOW_16_in_functionDeclaration117); 

            match(input,17,FOLLOW_17_in_functionDeclaration119); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "functionDeclaration"



    // $ANTLR start "forStmt"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:15:1: forStmt : 'for' '(' numberDeclarations fullBooleanExpressions ';' assignmentStmt ( ',' assignmentStmt )* ')' body ;
    public final void forStmt() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:15:9: ( 'for' '(' numberDeclarations fullBooleanExpressions ';' assignmentStmt ( ',' assignmentStmt )* ')' body )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:15:11: 'for' '(' numberDeclarations fullBooleanExpressions ';' assignmentStmt ( ',' assignmentStmt )* ')' body
            {
            match(input,26,FOLLOW_26_in_forStmt128); 

            match(input,16,FOLLOW_16_in_forStmt130); 

            pushFollow(FOLLOW_numberDeclarations_in_forStmt132);
            numberDeclarations();

            state._fsp--;


            pushFollow(FOLLOW_fullBooleanExpressions_in_forStmt136);
            fullBooleanExpressions();

            state._fsp--;


            match(input,19,FOLLOW_19_in_forStmt138); 

            pushFollow(FOLLOW_assignmentStmt_in_forStmt140);
            assignmentStmt();

            state._fsp--;


            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:15:84: ( ',' assignmentStmt )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==18) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:15:85: ',' assignmentStmt
            	    {
            	    match(input,18,FOLLOW_18_in_forStmt143); 

            	    pushFollow(FOLLOW_assignmentStmt_in_forStmt145);
            	    assignmentStmt();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            match(input,17,FOLLOW_17_in_forStmt149); 

            pushFollow(FOLLOW_body_in_forStmt151);
            body();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "forStmt"



    // $ANTLR start "dowhileStmt"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:17:1: dowhileStmt : 'do' body 'while' '(' fullBooleanExpressions ')' ';' ;
    public final void dowhileStmt() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:17:12: ( 'do' body 'while' '(' fullBooleanExpressions ')' ';' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:17:14: 'do' body 'while' '(' fullBooleanExpressions ')' ';'
            {
            match(input,22,FOLLOW_22_in_dowhileStmt158); 

            pushFollow(FOLLOW_body_in_dowhileStmt160);
            body();

            state._fsp--;


            match(input,36,FOLLOW_36_in_dowhileStmt162); 

            match(input,16,FOLLOW_16_in_dowhileStmt164); 

            pushFollow(FOLLOW_fullBooleanExpressions_in_dowhileStmt166);
            fullBooleanExpressions();

            state._fsp--;


            match(input,17,FOLLOW_17_in_dowhileStmt168); 

            match(input,19,FOLLOW_19_in_dowhileStmt170); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "dowhileStmt"



    // $ANTLR start "whileStmt"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:19:1: whileStmt : 'while' '(' fullBooleanExpressions ')' body ;
    public final void whileStmt() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:19:10: ( 'while' '(' fullBooleanExpressions ')' body )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:19:12: 'while' '(' fullBooleanExpressions ')' body
            {
            match(input,36,FOLLOW_36_in_whileStmt177); 

            match(input,16,FOLLOW_16_in_whileStmt179); 

            pushFollow(FOLLOW_fullBooleanExpressions_in_whileStmt181);
            fullBooleanExpressions();

            state._fsp--;


            match(input,17,FOLLOW_17_in_whileStmt183); 

            pushFollow(FOLLOW_body_in_whileStmt185);
            body();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "whileStmt"



    // $ANTLR start "ifStmt"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:1: ifStmt : ( if body ) ( elseIf body )* ( else body )? ;
    public final void ifStmt() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:8: ( ( if body ) ( elseIf body )* ( else body )? )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:10: ( if body ) ( elseIf body )* ( else body )?
            {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:10: ( if body )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:11: if body
            {
            pushFollow(FOLLOW_if_in_ifStmt194);
            if();

            state._fsp--;


            pushFollow(FOLLOW_body_in_ifStmt196);
            body();

            state._fsp--;


            }


            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:20: ( elseIf body )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==24) ) {
                    int LA10_1 = input.LA(2);

                    if ( (LA10_1==27) ) {
                        alt10=1;
                    }


                }


                switch (alt10) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:21: elseIf body
            	    {
            	    pushFollow(FOLLOW_elseIf_in_ifStmt200);
            	    elseIf();

            	    state._fsp--;


            	    pushFollow(FOLLOW_body_in_ifStmt202);
            	    body();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:35: ( else body )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==24) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:21:36: else body
                    {
                    pushFollow(FOLLOW_else_in_ifStmt207);
                    else();

                    state._fsp--;


                    pushFollow(FOLLOW_body_in_ifStmt209);
                    body();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "ifStmt"



    // $ANTLR start "elseIf"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:23:1: elseIf : 'else' 'if' '(' fullBooleanExpressions ')' ;
    public final void elseIf() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:23:8: ( 'else' 'if' '(' fullBooleanExpressions ')' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:23:10: 'else' 'if' '(' fullBooleanExpressions ')'
            {
            match(input,24,FOLLOW_24_in_elseIf219); 

            match(input,27,FOLLOW_27_in_elseIf221); 

            match(input,16,FOLLOW_16_in_elseIf223); 

            pushFollow(FOLLOW_fullBooleanExpressions_in_elseIf225);
            fullBooleanExpressions();

            state._fsp--;


            match(input,17,FOLLOW_17_in_elseIf227); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "elseIf"



    // $ANTLR start "else"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:25:1: else : 'else' ;
    public final void else() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:25:6: ( 'else' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:25:8: 'else'
            {
            match(input,24,FOLLOW_24_in_else235); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "else"



    // $ANTLR start "if"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:27:1: if : 'if' '(' fullBooleanExpressions ')' ;
    public final void if() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:27:4: ( 'if' '(' fullBooleanExpressions ')' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:27:6: 'if' '(' fullBooleanExpressions ')'
            {
            match(input,27,FOLLOW_27_in_if243); 

            match(input,16,FOLLOW_16_in_if245); 

            pushFollow(FOLLOW_fullBooleanExpressions_in_if247);
            fullBooleanExpressions();

            state._fsp--;


            match(input,17,FOLLOW_17_in_if249); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "if"



    // $ANTLR start "fullBooleanExpressions"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:1: fullBooleanExpressions : ( booleanExpressions ( LogicalOperators booleanExpressions )* ) ;
    public final void fullBooleanExpressions() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:23: ( ( booleanExpressions ( LogicalOperators booleanExpressions )* ) )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:27: ( booleanExpressions ( LogicalOperators booleanExpressions )* )
            {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:27: ( booleanExpressions ( LogicalOperators booleanExpressions )* )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:28: booleanExpressions ( LogicalOperators booleanExpressions )*
            {
            pushFollow(FOLLOW_booleanExpressions_in_fullBooleanExpressions259);
            booleanExpressions();

            state._fsp--;


            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:47: ( LogicalOperators booleanExpressions )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==LogicalOperators) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:29:48: LogicalOperators booleanExpressions
            	    {
            	    match(input,LogicalOperators,FOLLOW_LogicalOperators_in_fullBooleanExpressions262); 

            	    pushFollow(FOLLOW_booleanExpressions_in_fullBooleanExpressions264);
            	    booleanExpressions();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "fullBooleanExpressions"



    // $ANTLR start "booleanExpressions"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:31:1: booleanExpressions : ( ( number ComparisonOperators numberExpression ) | booleanValue );
    public final void booleanExpressions() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:31:19: ( ( number ComparisonOperators numberExpression ) | booleanValue )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( ((LA13_0 >= DoubleValue && LA13_0 <= IntValue)) ) {
                alt13=1;
            }
            else if ( (LA13_0==25||LA13_0==34) ) {
                alt13=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;

            }
            switch (alt13) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:31:21: ( number ComparisonOperators numberExpression )
                    {
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:31:21: ( number ComparisonOperators numberExpression )
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:31:22: number ComparisonOperators numberExpression
                    {
                    pushFollow(FOLLOW_number_in_booleanExpressions275);
                    number();

                    state._fsp--;


                    match(input,ComparisonOperators,FOLLOW_ComparisonOperators_in_booleanExpressions277); 

                    pushFollow(FOLLOW_numberExpression_in_booleanExpressions279);
                    numberExpression();

                    state._fsp--;


                    }


                    }
                    break;
                case 2 :
                    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:31:69: booleanValue
                    {
                    pushFollow(FOLLOW_booleanValue_in_booleanExpressions284);
                    booleanValue();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "booleanExpressions"



    // $ANTLR start "numberDeclarations"
    // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:33:1: numberDeclarations : ( 'int' | 'double' ) ID ( ( '=' numberExpression ( ArithmaticOperators numberExpression )* ) | ( ',' ID )* ) ';' ;
    public final void numberDeclarations() throws RecognitionException {
        try {
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:33:19: ( ( 'int' | 'double' ) ID ( ( '=' numberExpression ( ArithmaticOperators numberExpression )* ) | ( ',' ID )* ) ';' )
            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:33:21: ( 'int' | 'double' ) ID ( ( '=' numberExpression ( ArithmaticOperators numberExpression )* ) | ( ',' ID )* ) ';'
            {
            if ( input.LA(1)==23||input.LA(1)==28 ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            match(input,ID,FOLLOW_ID_in_numberDeclarations299); 

            // C:\\Users\\zizoa\\Desktop\\100%Compiler\\Values.g:33:43: ( ( '=' numberExpression ( ArithmaticOperators numberExpression )* ) | ( ',' ID )* )
            int alt16=2;
            int LA16_0 = input.LA(1);
